force-app/main/default/objects/Purchase_Transaction__c/Purchase_Transaction__c.object-meta.xml
<CustomObject>
    <description>Parent record for a ticket purchase. One per transaction, N Attendee children.</description>
    <label>Purchase Transaction</label>
    <nameField>
        <displayFormat>TXN-{000000}</displayFormat>
        <label>Purchase Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>