force-app/main/default/objects/Purchase_Transaction__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <description>If present, used to resolve campaign attribution</description>
    <label>Discount Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>