force-app/main/default/objects/Purchase_Transaction__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Purchase Transactions</relationshipLabel>
    <relationshipName>Purchase_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>