force-app/main/default/objects/Purchase_Transaction__c/fields/Payment_Ref__c.field-meta.xml
<CustomField>
    <fullName>Payment_Ref__c</fullName>
    <label>Payment Reference</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>