force-app/main/default/objects/Purchase_Transaction__c/fields/Purchaser_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Email__c</fullName>
    <label>Purchaser Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>