force-app/main/default/objects/Purchase_Transaction__c/fields/Purchaser_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Name__c</fullName>
    <label>Purchaser Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>