force-app/main/default/objects/Purchase_Transaction__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ticket Tier</label>
    <referenceTo>Ticket_Tier__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>